k8s/employee-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: employee-service

  template:
    metadata:
      labels:
        app: employee-service

    spec:
      containers:
        - name: employee-service
         # image: employee-service:v1
          image: 411653576368.dkr.ecr.ap-south-1.amazonaws.com/employee-service:v1

         # imagePullPolicy: Never
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 60   # 10 + 60*10 = up to 610s to finish starting before liveness/readiness kick in

          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
