k8s/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prometheus
  namespace: monitoring

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: prometheus

  template:
    metadata:
      labels:
        app: prometheus

    spec:
      serviceAccountName: prometheus
      securityContext:
        fsGroup: 65534

      containers:
        - name: prometheus
          image: prom/prometheus:v3.13.1

          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"

          ports:
            - containerPort: 9090
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 15

          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus

            - name: prometheus-data
              mountPath: /prometheus

      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config

        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-data
