k8s/employee-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service

spec:
  # type: NodePort
  type: ClusterIP

  selector:
    app: employee-service

  ports:
    - port: 8080
      targetPort: 8080
      # nodePort: 30080
