k8s/grafana-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana
  namespace: monitoring

spec:
  type: NodePort

  selector:
    app: grafana

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30030
