k8s/prometheus-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: prometheus
  namespace: monitoring

spec:
  type: NodePort

  selector:
    app: prometheus

  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090
